--- a/src/App.css
+++ b/src/App.css
@@ -24,7 +24,7 @@ body {
   --box-shadow-color: 4px 4px 6px 0 rgba(255, 255, 255, 0.5), -4px -4px 6px 0 rgba(116, 125, 136, 0.5), inset -4px -4px 6px 0 rgba(255, 255, 255, 0.2), inset 4px 4px 6px 0 rgba(0, 0, 0, 0.4);
 }
 
-a {
+a* {
   text-decoration: none;
   display: inline-block;
 }
