--- a/src/App.css
+++ b/src/App.css
@@ -10,6 +10,7 @@ body {
 
 
 :root {
+  --bg-black: #222;
   --violet: #6d28d9;
   --purple: #7e22ce;
   --green: #25d366;
@@ -25,6 +26,23 @@ body {
 }
 
 
+body.active {
+  --hijau: #fff;
+  --text-green: #ff014f;
+  --red: #ff014f;
+  --green: #ff014d00;
+  --black: #fff;
+  --gray: rgba(196, 207, 222, 0.9);
+  --light-color: #ddd;
+  --bg-color: #222;
+  --border: 0.1rem solid rgba(0, 0, 0, 0.4);
+  --box-shadow: 0.4rem 0.4rem 1rem #111, -0.4rem -0.4rem 1rem #333;
+  --box-shadow-inset: 0.4rem 0.4rem 1rem #111 inset, -0.4rem -0.4rem 1rem #333 inset;
+  --box-shadow-color: 0.4rem 0.4rem 1rem #111 inset, -0.4rem -0.4rem 1rem #333 inset;
+}
+
+
+
 a{
   text-decoration: none !important;
   display: inline-block;
@@ -32,6 +50,8 @@ a{
 
 /* header Part Start  */
   .header-top-strip{
-    background: var(--bg-color);
+    background: var(--bg-black);
   }
+
+
 /* header Part End */
