--- a/src/App.css
+++ b/src/App.css
@@ -51,7 +51,7 @@ a{
 
 /* header Part Start  */
   .header-top-strip{
-    background: var(--bg-black);
+    /* background: var(--bg-black); */
   }
 
 
